# euler

./: CHANGELOG.md  projeuler.cabal
task1/: Main.hs
task2/: Main.hs
task3/: Main.hs
task4/: Main.hs
task5/: manual.txt
task6/: Main.hs
task7/: Main.hs
task8/: Main.hs
