cabal-version:      2.4
name:               projeuler
version:            0.1.0.0

author:             Michael Steinle
maintainer:         michael.steinle@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable task1
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   task1
    default-language: Haskell2010

executable task2
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   task2
    default-language: Haskell2010

executable task3
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   task3
    default-language: Haskell2010

executable task4
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0, containers
    hs-source-dirs:   task4
    default-language: Haskell2010

-- task5 was solved manually, see the text file in the folder.

executable task6
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   task6
    default-language: Haskell2010

executable task7
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   task7
    default-language: Haskell2010